# nsaca

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SETUP.md  docker-compose.yml  pyproject.toml  requirements-deploy.txt  vercel.json
.github/workflows/: deploy.yml
docker/python/: Dockerfile
docker/rust/: Dockerfile
docs/: architecture.md  getting-started.md
python/nsaca/: __init__.py  __main__.py  api.py  main.py
python/nsaca/algorithms/: __init__.py  complexity.py  optimizer.py  selector.py
python/nsaca/core/: __init__.py  decision_engine.py  llm_client.py  orchestrator.py  problem_parser.py
python/nsaca/debugging/: __init__.py  adversarial.py  edge_cases.py  self_healing.py
python/nsaca/execution/: __init__.py  benchmark.py  distributed.py
python/nsaca/feedback/: __init__.py  human_loop.py
python/nsaca/graph/: __init__.py  ast_parser.py  dependency_graph.py  knowledge_graph.py
python/nsaca/memory/: __init__.py  graph_memory.py  transfer.py  vector_store.py
python/nsaca/reasoning/: __init__.py  gnn.py  llm_reasoner.py  mcts.py
python/nsaca/visualization/: __init__.py  architecture.py  reasoning_display.py
python/tests/: __init__.py  test_algorithms.py  test_debugging.py  test_execution.py  test_feedback.py  test_graph.py  test_integration.py  test_memory.py  test_orchestrator.py  test_reasoning.py  test_visualization.py
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/algorithms/: dp.rs  graph.rs  mod.rs
rust/src/benchmark/: mod.rs  runner.rs
rust/src/data_structures/: bloom_filter.rs  heap.rs  mod.rs  segment_tree.rs  suffix_array.rs  trie.rs
rust/src/optimizer/: compiler.rs  mod.rs
