[project]
name = "nsaca"
version = "0.1.0"
description = "NeuroSymbolic Autonomous Code Architect - AI software architect for designing, optimizing, and self-improving software systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "NSACA Team" }]
keywords = ["ai", "software-architecture", "dsa", "neurosymbolic", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.0",
    "numpy>=1.24",
    "networkx>=3.0",
    "openai>=1.0",
    "tiktoken>=0.5",
    "chromadb>=0.4",
    "sentence-transformers>=2.2",
    "torch>=2.0",
    "transformers>=4.30",
    "tree-sitter>=0.20",
    "structlog>=23.0",
    "asyncio-mqtt>=0.16",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "pre-commit>=3.0",
]

[project.scripts]
nsaca = "nsaca.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/nsaca"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["python"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["python/tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
]
