[package]
name = "nsaca_dsa"
version = "0.1.0"
edition = "2021"
description = "NSACA Performance-Critical DSA Engine"
license = "MIT"

[lib]
name = "nsaca_dsa"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hashbrown = "0.14"
num-traits = "0.2"
rayon = "1.8"
thiserror = "1.0"
tracing = "0.1"
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
tempfile = "3.0"

[features]
default = ["python"]
python = ["pyo3"]

[[bench]]
name = "dsa_benchmarks"
harness = false
